--- a/DC_Crime1.ipynb
+++ b/DC_Crime1.ipynb
@@ -41,7 +41,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.font_manager as fm\n",
-    "from gmplot import gmplot"
+    "from gmplot import gmplot\n",
+    "import gmaps"
    ]
   },
   {
@@ -2100,30 +2101,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'DataFrame' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-45-711e43836890>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Display a heatmap of robberies\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mlatitudes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcrime_robbery_df\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"LATITUDE\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mlongitudes\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mcrime_robbery_df\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"LONGITUDE\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mgmap\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mgmplot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGoogleMapPlotter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m38.899815\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m77.022431\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'DataFrame' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display a heatmap of robberies\n",
-    "latitudes = crime_robbery_df(\"LATITUDE\")\n",
-    "longitudes= crime_robbery_df(\"LONGITUDE\")\n",
-    "\n",
-    "gmap=gmplot.GoogleMapPlotter(38.899815,-77.022431,10)\n",
+    "latitudes = crime_robbery_df[\"LATITUDE\"]\n",
+    "longitudes= crime_robbery_df[\"LONGITUDE\"]\n",
+    "gmap=gmplot.GoogleMapPlotter(38.899815,-77.022431,13)\n",
     "gmap.heatmap(latitudes, longitudes)\n",
-    "gmap.show\n",
+    "gmap.draw(\"robbery_heatmap.html\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Display a heatmap of other theft\n",
+    "latitudes = crime_theftother_df[\"LATITUDE\"]\n",
+    "longitudes= crime_theftother_df[\"LONGITUDE\"]\n",
+    "gmap=gmplot.GoogleMapPlotter(38.899815,-77.022431,13)\n",
+    "gmap.heatmap(latitudes, longitudes)\n",
+    "gmap.draw(\"theftother_heatmap.html\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Display a heatmap of homicide\n",
+    "latitudes = crime_homicide_df[\"LATITUDE\"]\n",
+    "longitudes= crime_homicide_df[\"LONGITUDE\"]\n",
+    "gmap=gmplot.GoogleMapPlotter(38.899815,-77.022431,13)\n",
+    "gmap.heatmap(latitudes, longitudes)\n",
+    "gmap.draw(\"homicide_heatmap.html\")\n"
    ]
   },
   {
